Fixed Navbar issue

--- a/styles.css
+++ b/styles.css
@@ -1,11 +1,12 @@
 * {
     margin: 0;
     padding: 0;
-    box-sizing: border-box;
+    /* box-sizing: border-box; */
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
 body {
+    
     background-color: #d5e3e3;
     color: #2C3E50;
     line-height: 1.6;
@@ -28,7 +29,7 @@ header {
 .logo {
     display: flex;
     align-items: center;
-    padding-left: 1px;
+    padding-left: 2px;
 
 }
 
@@ -40,9 +41,7 @@ header {
 
 .logo-img img {
     height: 3px;
-    /* Adjust as needed */
     margin-right: 10px;
-    /* Space between logo and text */
 }
 
 .logo-text a {
@@ -58,47 +57,35 @@ header {
 }
 
 nav {
-    display: flex;
-    justify-content: center; /* centers the ul */
+    display: flex; 
     align-items: center;
-    padding: 10px 50px;
-    max-width: 1200px;
-    margin: 0 auto;
-    width: 100%;
-    box-sizing: border-box;
+    padding: 10px 30px;
+    justify-content: space-around;
 }
 
 
-
 nav ul {
-    display: flex;
-    gap: 60px; /* spacing between links */
+    display: flex; 
+    flex-wrap: wrap;   
     list-style: none;
-    padding: 0;
-    margin: 0;
+    justify-content: space-around;
+    flex-grow: 1;
 }
 
 
 nav ul li {
-    margin: 0;           /* remove unnecessary margins */
+    margin: 0 15px; 
 }
 
-nav a {
+nav a {    
     color: white;
+    transition: transform 0.3s ease, color 0.3s ease;
+    display: inline-block;    
     text-decoration: none;
     font-weight: 500;
-}
-
-
-
-nav a:hover {
-    text-decoration: underline;
-}
-
-.container {
-    max-width: 1200px;
-    margin: 0 auto;
-    padding: 20px;
+}nav a:hover {
+    transform: scale(1.2);
+    color: #4c4479;
 }
 
 .hero {
@@ -112,7 +99,7 @@ nav a:hover {
     align-items: center;
     text-align: center;
     color: white;
-    margin-bottom: 40px;
+    padding: 2%;
 }
 
 .hero h1 {
@@ -128,17 +115,16 @@ nav a:hover {
 
 .btn {
     display: inline-block;
-    background-color: #F1C40F;
+    background-color: #d8b31e;
     color: #76610d;
     padding: 12px 24px;
     border-radius: 5px;
     text-decoration: none;
     font-weight: bold;
-    transition: background-color 0.3s;
-}
-
-.btn:hover {
-    background-color: #3d98c2;
+    transition: transform 0.03 ease, background-color 0.3s;
+}.btn:hover {
+    transform: scale(1.05);
+    background-color: #c2d6e0;
 }
 
 .section-title {
@@ -234,13 +220,13 @@ nav a:hover {
 .services-list {
     display: grid;
     grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
-    gap: 20px;
+    gap: 30px;
     margin-bottom: 60px;
-    color: #d8d8d8;
+    color: #d8d8d8;    
 }
 
 .service-item {
-    background-color: #2f3744;
+    background-color: #3c4756;
     padding: 30px;
     border-radius: 10px;
     text-align: center;
